2023-10-18T16:24:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6563754338 # 876
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 260 548 / 273 578
* notice: next accum: outdated-unq outdated-all / unq all: 260 548 / 274 579
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-04 2023-10-18]

2023-10-18T01:17:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6554877283 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-18
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 260 548 / 273 577
* notice: next accum: outdated-unq outdated-all / unq all: 260 548 / 273 578
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-10-04 2023-10-17]

2023-10-17T16:23:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6550061763 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-17
* notice: last 14d: unq all: 2 29
* notice: prev accum: outdated-unq outdated-all / unq all: 258 545 / 273 577
* notice: next accum: outdated-unq outdated-all / unq all: 260 548 / 273 577
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-03] / []

2023-10-17T08:23:03Z: