@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-18T16:24:01Z",
-  "count_outdated" : 548,
-  "uniques_outdated" : 260,
-  "count" : 579,
-  "uniques" : 274,
+  "timestamp" : "2023-10-19T01:16:31Z",
+  "count_outdated" : 551,
+  "uniques_outdated" : 261,
+  "count" : 580,
+  "uniques" : 275,
   "clones" : [
-    {
-      "timestamp": "2023-10-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-05T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2023-10-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
